--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  margin: 2em;
+  align-self: center;
+  justify-self: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 325px;
+  color: rgb(241, 241, 241);
+  border-radius: 1em;
+  background-color: #222831;
 }
 
-.App-link {
-  color: #61dafb;
+.content-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 2em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.profile-picture {
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  height: 400px;
+  border-top-left-radius: 1em;
+  border-top-right-radius: 1em;
+}
+
+.name {
+  text-align: center;
+  margin: 0.25em;
+}
+
+.title {
+  color: #cfab85;
+  font-weight: bold;
+  text-align: center;
+  
+}
+
+a {
+  text-align: center;
+  color: azure;
+  text-decoration: none;
+  margin-bottom: 1em;
+}
+
+.btn-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+button {
+  display: flex;
+  align-items: center;
+  padding: 0.25em 0.75em;
+  font-weight: bold;
+  font-size: 1.2em;
+  border: none;
+  border-radius: .25em;
+}
+
+.linkedin-btn {
+  background-color: #5093E2;
+}
+
+.btn-icon {
+  margin-right: .5em;
+}
+
+.description {
+  margin-top: 1.5em;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-evenly;
 }
