--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #393E46;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+h1, h2, h3, p {
+  margin-top: 0;
 }
 
 code {
