--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,12 @@
   height: 400px;
   border-top-left-radius: 1em;
   border-top-right-radius: 1em;
+  transition: 500ms;
+}
+
+.profile-picture:hover {
+  transition: 500ms;
+  filter: sepia(10);
 }
 
 .name {
@@ -61,6 +67,12 @@ button {
   font-size: 1.2em;
   border: none;
   border-radius: .25em;
+  box-shadow: 6.9px 13.8px 13.8px hsl(0deg 0% 0% / 0.22);
+  transition: 500ms;
+}
+
+button:hover {
+  transform: scale(1.05); 
 }
 
 .linkedin-btn {
@@ -79,4 +91,17 @@ button .bi {
 .footer {
   display: flex;
   justify-content: space-evenly;
+  margin-top: 1em;
+  padding: 1em;
+}
+
+.footer .bi {
+  width: 1.5em;
+  height: 1.5em;
+}
+
+.footer .bi:hover {
+  transition: 300ms;
+  transform: scale(1.3) rotate(8deg);
+  
 }
