--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ button {
   align-items: center;
   padding: 0.5em 0.75em;
   font-weight: bold;
-  font-size: 1.2em;
+  font-size: 1.2rem;
   border: none;
   border-radius: .25em;
   box-shadow: 6.9px 13.8px 13.8px hsl(0deg 0% 0% / 0.22);
@@ -86,6 +86,15 @@ button .bi {
 
 .description {
   margin-top: 1.5em;
+}
+
+.description h2 {
+  letter-spacing: 0.1em;  
+  font-size: 1.25rem;
+}
+
+.description p {
+  line-height: 1.3em;
 }
 
 .footer {
