--- a/src/App.css
+++ b/src/App.css
@@ -90,11 +90,13 @@ button .bi {
 
 .description h2 {
   letter-spacing: 0.1em;  
-  font-size: 1.25rem;
+  font-size: 1.5rem;
+  margin-bottom: 0.4em;
 }
 
 .description p {
   line-height: 1.3em;
+  font-size: 1.2rem;
 }
 
 .footer {
@@ -107,6 +109,7 @@ button .bi {
 .footer .bi {
   width: 1.5em;
   height: 1.5em;
+  transition: 300ms;
 }
 
 .footer .bi:hover {
