--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 
 .profile-picture:hover {
   transition: 500ms;
-  filter: sepia(10);
+  filter:contrast(1.2)
 }
 
 .name {
@@ -42,7 +42,7 @@
 }
 
 .title {
-  color: #cfab85;
+  color: #cd85cf;
   font-weight: bold;
   text-align: center;
   
